fix: fix searchItem content overflow layout

--- a/src/Component/SearchForm/index.module.less
+++ b/src/Component/SearchForm/index.module.less
@@ -45,11 +45,6 @@
   &::placeholder {
     color: var(--color-field-placeholder, rgba(0, 0, 0, 0.4));
   }
-
-  &:disabled {
-    background: rgba(255, 255, 255, 0.5);
-    cursor: not-allowed;
-  }
 }
 
 .actionGroup {
